@@ -1,11 +1,13 @@
 package org.cloudburstmc.proxypass;
 
 import com.fasterxml.jackson.core.JsonGenerator;
+import com.fasterxml.jackson.core.Version;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.core.util.DefaultIndenter;
 import com.fasterxml.jackson.core.util.DefaultPrettyPrinter;
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.module.SimpleModule;
 import com.fasterxml.jackson.dataformat.yaml.YAMLMapper;
 import io.netty.bootstrap.Bootstrap;
 import io.netty.bootstrap.ServerBootstrap;
@@ -23,12 +25,15 @@ import org.cloudburstmc.netty.channel.raknet.config.RakChannelOption;
 import org.cloudburstmc.protocol.bedrock.BedrockPeer;
 import org.cloudburstmc.protocol.bedrock.BedrockPong;
 import org.cloudburstmc.protocol.bedrock.codec.BedrockCodec;
-import org.cloudburstmc.protocol.bedrock.codec.v786.Bedrock_v786;
+import org.cloudburstmc.protocol.bedrock.codec.v800.Bedrock_v800;
 import org.cloudburstmc.protocol.bedrock.data.definitions.BlockDefinition;
 import org.cloudburstmc.protocol.bedrock.netty.BedrockPacketWrapper;
 import org.cloudburstmc.protocol.bedrock.netty.initializer.BedrockChannelInitializer;
 import org.cloudburstmc.protocol.bedrock.packet.AvailableCommandsPacket;
 import org.cloudburstmc.protocol.common.DefinitionRegistry;
+import org.cloudburstmc.proxypass.network.bedrock.jackson.ColorDeserializer;
+import org.cloudburstmc.proxypass.network.bedrock.jackson.ColorSerializer;
+import org.cloudburstmc.proxypass.network.bedrock.jackson.NbtDefinitionSerializer;
 import org.cloudburstmc.proxypass.gui.ProxyPassGUI;
 import org.cloudburstmc.proxypass.network.bedrock.session.ProxyClientSession;
 import org.cloudburstmc.proxypass.network.bedrock.session.ProxyServerSession;
@@ -36,6 +41,7 @@ import org.cloudburstmc.proxypass.network.bedrock.session.UpstreamPacketHandler;
 import org.cloudburstmc.proxypass.network.bedrock.util.NbtBlockDefinitionRegistry;
 import org.cloudburstmc.proxypass.network.bedrock.util.UnknownBlockDefinitionRegistry;
 
+import java.awt.*;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
@@ -51,13 +57,16 @@ import java.util.function.Consumer;
 @Getter
 public class ProxyPass {
     public static final ObjectMapper JSON_MAPPER;
-    public static final YAMLMapper YAML_MAPPER = (YAMLMapper) new YAMLMapper().disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES);
+    private static final SimpleModule MODULE = new SimpleModule("ProxyPass", Version.unknownVersion())
+            .addSerializer(Color.class, new ColorSerializer())
+            .addDeserializer(Color.class, new ColorDeserializer())
+            .addSerializer(NbtBlockDefinitionRegistry.NbtBlockDefinition.class, new NbtDefinitionSerializer());
+
+    public static final YAMLMapper YAML_MAPPER = (YAMLMapper) new YAMLMapper()
+            .disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES);
     public static final String MINECRAFT_VERSION;
 
-    public static final BedrockCodec CODEC = Bedrock_v786.CODEC
-            .toBuilder()
-            .deregisterPacket(AvailableCommandsPacket.class)
-            .build();
+    public static final BedrockCodec CODEC = Bedrock_v800.CODEC;
 
     public static final int PROTOCOL_VERSION = CODEC.getProtocolVersion();
     private static final BedrockPong ADVERTISEMENT = new BedrockPong()
@@ -80,7 +89,6 @@ public class ProxyPass {
                 return this;
             }
 
-            @SuppressWarnings("NullableProblems")
             @Override
             public void writeObjectFieldValueSeparator(JsonGenerator generator) throws IOException {
                 generator.writeRaw(": ");
@@ -91,7 +99,9 @@ public class ProxyPass {
         PRETTY_PRINTER.indentArraysWith(indenter);
         PRETTY_PRINTER.indentObjectsWith(indenter);
 
-        JSON_MAPPER = new ObjectMapper().disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES).setDefaultPrettyPrinter(PRETTY_PRINTER);
+        JSON_MAPPER = new ObjectMapper()
+                .registerModule(MODULE)
+                .disable(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES).setDefaultPrettyPrinter(PRETTY_PRINTER);
         MINECRAFT_VERSION = CODEC.getMinecraftVersion();
     }
 
@@ -313,7 +323,7 @@ public class ProxyPass {
     public void saveMojangson(String name, NbtMap nbt) {
         Path outPath = dataDir.resolve(name);
         try {
-            Files.write(outPath, nbt.toString().getBytes(StandardCharsets.UTF_8), StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.CREATE);
+            Files.writeString(outPath, nbt.toString(), StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.CREATE);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
